Add github link in header

--- a/includes/header.html
+++ b/includes/header.html
@@ -22,6 +22,8 @@
                 <div class="mu-header-top-right">
                   <nav>
                     <ul class="mu-top-social-nav">
+                      
+                      <li><a href="https://github.com/Code-Comm/" target="_blank"><span class="fa fa-github"></span></a></li>
                       <li><a href="https://www.facebook.com/codecomm" target="_blank"><span class="fa fa-facebook"></span></a></li>
                       <!-- <li><a href="#"><span class="fa fa-twitter"></span></a></li> -->
                       <li><a href="https://plus.google.com/u/0/105655358878646552416" target="_blank"><span class="fa fa-google-plus"></span></a></li>
