--- a/includes/footer.html
+++ b/includes/footer.html
@@ -35,10 +35,7 @@
               <div class="mu-footer-widget">
                 <h4>News letter</h4>
                 <p>Get latest update, news & academic offers</p>
-                <form class="mu-subscribe-form">
-                  <input type="email" placeholder="Type your Email">
-                  <button class="mu-subscribe-btn" type="submit">Subscribe!</button>
-                </form>               
+                <div ng-include="'includes/mailchimp.html'"></div>
               </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
