Submit button for mailin list is set to input type

--- a/includes/mailchimp.html
+++ b/includes/mailchimp.html
@@ -1,8 +1,9 @@
 <form class="mu-subscribe-form" action="//codecomm.us14.list-manage.com/subscribe/post?u=7cb70912df411847b0924b544&amp;id=56e6b8f788" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	<input type="email" placeholder="Type your Email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-    <button class="mu-subscribe-btn" type="submit" name="subscribe" id="mc-embedded-subscribe" class="button">
-        Subscribe!</button>
+    <input class="mu-subscribe-btn" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
 </form>
+
+
 
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
