--- a/includes/menu.html
+++ b/includes/menu.html
@@ -18,7 +18,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
-            <li class="active"><a href="#/">Home</a></li>            
+            <li><a href="#/">Home</a></li>            
+        <!--
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">Course <span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -26,8 +27,6 @@
                 <li><a href="#course-detail">Course Detail</a></li>                
               </ul>
             </li>  
-              
-        <!--
             <li><a href="#gallery">Gallery</a></li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">Blog <span class="fa fa-angle-down"></span></a>
@@ -37,8 +36,6 @@
               </ul>
             </li>
         -->
-            <li><a href="#contact">Contact</a></li>              
-            <li><a href="#" id="mu-search-icon"><i class="fa fa-search"></i></a></li>
           </ul>                     
         </div><!--/.nav-collapse -->        
       </div>     
